# ethsold

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierrc  .solhint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README_RU.md  SECURITY.md  codecov.yml  docker-compose.yml  hardhat.config.js  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
assemblyscript/wasm-example/: README.md
bash/scripts/: README.md  deploy-node.sh  smart-contract-deploy.sh
cairo/starknet-contract/: README.md  Scarb.toml  counter.cairo  erc20.cairo
clarity/stacks-contract/: Clarinet.toml  README.md  counter.clar  sip010-token.clar
contracts/: Auction.sol  Escrow.sol  README.md  SimpleNFT.sol
cpp/crypto-algorithms/: CMakeLists.txt  README.md  keccak256.cpp
crystal/blockchain_tools/: README.md  shard.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  GAS_OPTIMIZATION.md
elixir/blockchain_node/: README.md  mix.exs
frontend/landing-page/: index.html  script.js  styles.css
go/cosmos-module/: README.md  go.mod
go/rpc-client/: .env.example  README.md  go.mod  main.go  main_test.go
haskell/plutus-cardano/: README.md  simple-validator.hs
ink/polkadot-contract/: Cargo.toml  README.md  erc20.rs  lib.rs
java/web3j-example/: README.md  pom.xml
rust/near-contract/: Cargo.toml  README.md
rust/near-contract/src/: lib.rs
rust/solana-program/: Cargo.toml  README.md
rust/solana-program/src/: lib.rs
rust/solana-program/tests/: counter_test.rs
scripts/: README.md  deploy-all.js  deploy-crowdfunding.js  deploy-nft.js  deploy-voting.js  example-crowdfunding.js  example-nft.js  example-voting.js
solidity/: .env.example  README.md  compile-with-solcjs.js  hardhat.config.js  package-lock.json  package.json
test/: Crowdfunding.test.js  Voting.test.js
vyper/: ERC20Token.vy  README.md  deploy.py  requirements.txt  test_erc20.py
(+72 files in other folders)
