[package]
name = "counter-program"
version = "0.1.0"
edition = "2021"
description = "A simple Solana counter program using Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_program"

[dependencies]
anchor-lang = "0.32.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
